# phi4-test

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.sh
frontend/: app.py
