[tool.poetry]
name = "phi4-test"
version = "0.1.0"
description = ""
authors = ["coby@vessl.ai"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
vllm = "^0.8.5.post1"
gradio = "^5.29.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
